--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Acme&family=Montserrat:wght@200&display=swap" rel="stylesheet">
@@ -16,17 +16,17 @@
 <body>
     <nav>
         <div class="logo">
-          <img src="../images/budgetwaylogo.png" alt="missing logo">
+          <img src="images/budgetwaylogo.png" alt="missing logo">
           </div>
           <div class="nav-links">
              <a class="selected" href="../html/index.html">Home</a>
-            <a href="../html/about.html">About</a>
+            <a href="html/about.html">About</a>
             <a href="#same-page-nav-jump">Contact</a>
           </div>
         </nav>
 
         <div class="videoplay">
-            <video src="../images/world-2.mp4" type="video/mp4" autoplay muted loop></video>
+            <video src="images/world-2.mp4" type="video/mp4" autoplay muted loop></video>
             <div class="videotext">
                 <h1>Welcome</h1>
                 <p>Welcome to BudgetWay where you can easily select a country and access valuable<br>
@@ -56,9 +56,9 @@
         </div>
 
         <div class="image-container">
-            <img src="../Images/London2.jpg" alt="Image 1">
-            <img src="../Images/Paris.jpg" alt="Image 2" id="centerimg">
-            <img src="../Images/Rome.jpg" alt="Image 3">
+            <img src="Images/London2.jpg" alt="Image 1">
+            <img src="Images/Paris.jpg" alt="Image 2" id="centerimg">
+            <img src="Images/Rome.jpg" alt="Image 3">
           </div>
 
         </div>
@@ -101,8 +101,8 @@
             </div>
           </form>
        
-          <script src="../js/fetchcountries.js"></script>
-          <script src="../js/contact.js"></script>
+          <script src="js/fetchcountries.js"></script>
+          <script src="js/contact.js"></script>
 
 </body>
 </html>
