--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <body>
     <nav>
         <div class="logo">
-          <img src="images/budgetwaylogo.png" alt="missing logo">
+          <img src="Images/budgetwaylogo.png" alt="missing logo">
           </div>
           <div class="nav-links">
-             <a class="selected" href="../html/index.html">Home</a>
-            <a href="html/about.html">About</a>
+             <a class="selected" href="index.html">Home</a>
+            <a href="about.html">About</a>
             <a href="#same-page-nav-jump">Contact</a>
           </div>
         </nav>
 
         <div class="videoplay">
-            <video src="images/world-2.mp4" type="video/mp4" autoplay muted loop></video>
+            <video src="Images/world-2.mp4" type="video/mp4" autoplay muted loop></video>
             <div class="videotext">
                 <h1>Welcome</h1>
                 <p>Welcome to BudgetWay where you can easily select a country and access valuable<br>
